[package]
name = "wasmonkey"
version = "0.1.8"
authors = ["Lucet team <lucet@fastly.com>"]
description = "Patch a WASM object file to replace a set of exported functions with imported functions from another library"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
categories = ["wasm"]
edition = "2018"

[dependencies]
clap = "2.33"
failure = "0.1"
goblin = "0.0.24"
lazy_static = "1.3"
parity-wasm = "0.40.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
siphasher = "0.3"
xfailure = "0.1"
