[package]
name = "lucet-libc-sys"
version = "0.1.0"
edition = "2018"

build = "build.rs"

[lib]
crate-type=["rlib"]

[features]
default = []
# used to conditionally link against liblucet-runtime-c.so for testing; eventually this should just
# depend on `lucet-runtime`
no-lucet-runtime-c = []

[build-dependencies]
bindgen = "0.45"

[profile.test]
rpath = true
