[package]
name = "lucet-libc-sys"
description = "Bindgen-generated bindings to lucet-libc C library"
authors = ["Pat Hickey <phickey@fastly.com>", "Frank Denis <fdenis@fastly.com>", "Adam C. Foltzer <acfoltzer@fastly.com>"]
license = "Apache-2.0 WITH LLVM-exception"
version = "0.1.0"
edition = "2018"

build = "build.rs"

[lib]
crate-type=["rlib"]

[dev-dependencies]
lucet-runtime = { path = "../../lucet-runtime" }

[build-dependencies]
bindgen = "0.47"
