[package]
name = "lucet-sys"
version = "0.1.0"
description = "Bindgen-generated bindings to lucet-runtime-c library"
authors = ["Pat Hickey <phickey@fastly.com>", "Frank Denis <fdenis@fastly.com>", "Adam C. Foltzer <acfoltzer@fastly.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

build = "build.rs"

[lib]
crate-type=["rlib"]

[build-dependencies]
bindgen = "0.47"
