[package]
name = "lucet-runtime-internals"
version = "0.6.2-dev"
description = "Pure Rust runtime for Lucet WebAssembly toolchain (internals)"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
lucet-module = { path = "../../lucet-module", version = "=0.6.2-dev" }
lucet-runtime-macros = { path = "../lucet-runtime-macros", version = "=0.6.2-dev" }

anyhow = "1.0"
bitflags = "1.0"
bincode = "1.1.4"
byteorder = "1.3"
lazy_static = "1.1"
libc = "0.2.65"
libloading = "0.5"
memoffset = "0.5.2"
nix = "0.17"
num-derive = "0.3.0"
num-traits = "0.2"
raw-cpuid = "6.0.0"
thiserror = "1.0.4"
tracing = "0.1.12"
userfaultfd = { version = "0.1.0", optional = true }

# This is only a dependency to ensure that other crates don't pick a newer version as a transitive
# dependency. `0.1.3 < getrandom <= 0.1.6` cause `lazy_static` to pull in spinlock implementations
# of concurrency primitives, which for unknown reasons cause our signal handling code to
# nondeterministically segfault. The maintainers have since removed the `lazy_static` dependency
# from `getrandom`, but until a new release is cut, this keeps it on a safe version.
getrandom = "=0.1.3"

[dev-dependencies]
byteorder = "1.2"

[build-dependencies]
cc = "1.0"

[features]
default-features = []
uffd = ["userfaultfd"]

[package.metadata.docs.rs]
features = ["uffd"]
