[package]
name = "lucet-runtime-internals"
version = "0.7.0-dev"
description = "Pure Rust runtime for Lucet WebAssembly toolchain (internals)"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
lucet-module = { path = "../../lucet-module", version = "=0.7.0-dev" }
lucet-runtime-macros = { path = "../lucet-runtime-macros", version = "=0.7.0-dev" }

anyhow = "1.0"
bitflags = "1.0"
bincode = "1.1.4"
byteorder = "1.3"
cfg-if = "0.1"
lazy_static = "1.4"
libc = "0.2.65"
libloading = "0.6"
memoffset = "0.5.3"
nix = "0.17"
num-derive = "0.3.0"
num-traits = "0.2"
rand = "0.7"
raw-cpuid = "6.0.0"
thiserror = "1.0.4"
tracing = "0.1.12"

[target.'cfg(target_os = "linux")'.dependencies]
userfaultfd = { version = "0.2.0", optional = true }

[dev-dependencies]
byteorder = "1.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["uffd"]
uffd = ["userfaultfd"]
concurrent_testpoints = []

[package.metadata.docs.rs]
features = ["uffd"]
