[package]
name = "lucet-runtime-macros"
version = "0.5.0"
description = "Macros for the Lucet WebAssembly runtime"
homepage = "https://github.com/bytecodealliance/lucet"
repository = "https://github.com/bytecodealliance/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
