[package]
name = "lucet-wasi-generate"
version = "0.7.0-dev"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
lucet-wiggle = { path = "../../lucet-wiggle" }
wasi-common = { path = "../../wasmtime/crates/wasi-common", features = ["wiggle_metadata"] }
wiggle-generate = { path = "../../wasmtime/crates/wiggle/generate" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
